--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --text-secondary: #a0a0a0;
   --danger: #ed4245;
   --success: #43b581;
+  --success-hover: #2e7c59;
   --radius: 12px;
   --shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
@@ -30,7 +31,7 @@ body {
 }
 
 .container {
-  max-width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem 1rem;
 }
@@ -105,6 +106,11 @@ button:disabled:hover {
   box-shadow: var(--shadow);
 }
 
+.todo-container-empty{
+  background: unset;
+  box-shadow: unset;
+}
+
 ul {
   list-style: none;
 }
@@ -133,6 +139,7 @@ li button {
   background-color: var(--danger);
   padding: 0.5rem 1rem;
   font-size: 0.9rem;
+  margin-left: 0.5rem;
 }
 
 li button.toggle {
@@ -348,11 +355,53 @@ footer {
 
 .search-input{
   display: flex;
-      gap: 0.5rem;
-      margin-bottom: 2rem;
-      background: var(--surface-lighter);
-      padding: 0.5rem;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-  }
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+  background: var(--surface-lighter);
+  padding: 0.5rem;
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+}
 
+.button-detail{
+  width: 15rem;
+  margin-right: 20px;
+  background-color: var(--success);
+}
+
+.button-detail:hover{
+  background-color: var(--success-hover);
+}
+
+.delete {
+background: var(--danger) !important;
+}
+
+.todo-priority {
+  color: #836600;
+  font-weight: 600;
+  font-size: 0.95em;
+  background: #fbe471;
+  border-radius: 4px;
+  padding: 2px 7px;
+  margin-right: 6px;
+  flex: 0 0 10%;
+  margin-right: 30px;
+  border-radius: var(--radius);
+}
+
+.btn-primary {
+  background-color: var(--primary);
+  color: var(--text);
+  border: none;
+  padding: 0.75rem 1.25rem;
+  border-radius: var(--radius);
+  font-size: 1rem;
+  cursor: pointer;
+  text-decoration: none;  
+  display: inline-block;  
+}
+
+.btn-primary:hover{
+  background-color: var(--primary-hover);
+}
